# ft_vox

./: .clang-format  .clang-tidy  .clangd  .gitignore  CMakeLists.txt  README.md  TODO.md  build.ps1  build.sh  libs_clean.sh  libs_install.sh
assets/: blocks.json
shaders/glsl/: colored_triangle.frag  colored_triangle.vert  colored_triangle_mesh.vert  gradient.comp  sky.comp  voxel.frag  voxel.vert
shaders/spv/: simple_shader.frag.spv  simple_shader.vert.spv
src/: App.cpp  App.hpp  Window.cpp  main.cpp  main_client.cpp  main_server.cpp
src/client/Core/: App.cpp  App.hpp  InputManager.cpp  InputManager.hpp  Window.cpp  Window.hpp
src/client/Game/: Camera.cpp  Camera.hpp
src/client/Graphics/: CommandExecutor.cpp  CommandExecutor.hpp  DescriptorAllocator.cpp  DescriptorAllocator.hpp  FrameManager.cpp  FrameManager.hpp  MeshManager.cpp  MeshManager.hpp  Pipeline.cpp  Pipeline.hpp  RenderContext.cpp  RenderContext.hpp  Renderer.cpp  Renderer.hpp  VoxelRenderer.cpp  VoxelRenderer.hpp  VulkanBuffer.hpp  VulkanDevice.cpp  VulkanDevice.hpp  VulkanSwapchain.cpp  VulkanSwapchain.hpp  VulkanTypes.hpp
src/client/Graphics/Core/: DeletionQueue.hpp  VulkanBuffer.cpp  VulkanDevice.cpp  VulkanDevice.hpp  VulkanSwapchain.cpp  VulkanTypes.hpp
src/client/Graphics/Pipeline/: ComputePipelineBuilder.cpp  ComputePipelineBuilder.hpp  GraphicsPipelineBuilder.cpp  GraphicsPipelineBuilder.hpp  Pipeline.cpp  Pipeline.hpp
src/client/Graphics/Rendering/: CommandExecutor.cpp  FrameManager.cpp  FrameManager.hpp  RenderContext.cpp  RenderContext.hpp
src/client/Graphics/Voxel/: MeshBufferPool.cpp  MeshBufferPool.hpp  MeshManager.cpp  MeshManager.hpp  VoxelRenderer.cpp  VoxelRenderer.hpp
src/common/Types/: RenderTypes.hpp
src/common/Util/: perlinNoise.cpp  perlinNoise.hpp
src/common/World/: BlockRegistry.cpp  BlockRegistry.hpp  Chunk.cpp  Chunk.hpp  ChunkMesh.cpp  ChunkMesh.hpp
src/shaders/: simple_shader.frag  simple_shader.vert
